refactor: move hooks from type to module
- Introduce `Hooks` module with all the hooks moved there instead of being defined in the `React` type. This way, the generated JS is cleaner because module function names aren't mangled.
- Move `React` inline type extensions to a separate "Extensions" file.
- Remove `Hook` attributes from inline functions for their irrelevance.

--- a/src/ElmishStore/ElmishStore.fsproj
+++ b/src/ElmishStore/ElmishStore.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="UseSyncExternalStore.fs" />
     <Compile Include="ElmishStore.fs" />
     <Compile Include="Hooks.fs" />
+    <Compile Include="Extensions.fs" />
   </ItemGroup>
   <ItemGroup>
       <Content Include="*.fsproj; *.fs" Exclude="**\*.fs.js" PackagePath="fable\" />
