--- a/src/ElmishStore/ElmishStore.fsproj
+++ b/src/ElmishStore/ElmishStore.fsproj
@@ -6,7 +6,7 @@
         <PackageTags>fsharp;fable;react;elmish</PackageTags>
         <Authors>Łukasz Krzywizna</Authors>
         <Company>SelectView Data Solutions</Company>
-        <Version>0.2.1</Version>
+        <Version>0.3.0-beta.0</Version>
         <TargetFramework>net6.0</TargetFramework>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/SelectViewData/elmish-store</RepositoryUrl>
