--- a/src/ElmishStore/ElmishStore.fsproj
+++ b/src/ElmishStore/ElmishStore.fsproj
@@ -6,7 +6,7 @@
         <PackageTags>fsharp;fable;react;elmish</PackageTags>
         <Authors>Łukasz Krzywizna</Authors>
         <Company>SelectView Data Solutions</Company>
-        <Version>0.3.0-beta.0</Version>
+        <Version>0.3.0-beta.1</Version>
         <TargetFramework>net6.0</TargetFramework>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/SelectViewData/elmish-store</RepositoryUrl>
@@ -26,6 +26,7 @@
         <Compile Include="UseSyncExternalStore.fs" />
         <Compile Include="ElmishStore.fs" />
         <Compile Include="Hooks.fs" />
+        <Compile Include="StoreApi.fs" />
         <Compile Include="Extensions.fs" />
     </ItemGroup>
     <ItemGroup>
